[package]
name = "winauth"
version = "0.1.0"
authors = ["Steffen Butzer <steffen.butzer@outlook.com>"]
license = "MIT/Apache-2.0"

[dependencies]
bitflags = "0.7"
byteorder = "1.0.0"
rand = "0.3"
md5 = "0.3.3"

[target.'cfg(windows)'.dependencies]
winapi = "0.2"
kernel32-sys = "0.2"
secur32-sys = "0.2"
