[package]
name = "winauth"
description = "Windows Authentication in Rust (NTLMv2)"
repository = "https://github.com/steffengy/winauth-rs"
documentation = "https://docs.rs/winauth/"
version = "0.0.5"
authors = ["Steffen Butzer <steffen.butzer@outlook.com>"]
license = "MIT/Apache-2.0"
keywords = ["ntlm", "sspi", "winauth"]
edition = "2018"

[dependencies]
bitflags = "2.5"
byteorder = "1.5.0"
rand = "0.8"
md5 = "0.7.0"
base64 = { version = "0.22" }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_Security_Authentication_Identity"] }

[dev-dependencies]
hyper = "1.2"
tokio = { version = "1", features = ["full"] }
hyper-tls = "0.6"
reqwest= "0.12"
cfg-if = "1.0"
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
